Added multilingual on policy details screens

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -52,7 +52,7 @@
     "team": "Team",
     "tickets": "Tickets",
     "view_all": "ALLE ANZEIGEN",
-    "dispatch": "VERSENDEN",
+    "dispatch": "MASS VERSAND",
     "more": "mehr",
     "DAY": "Tag",
     "WEEK": "Woche",
@@ -754,5 +754,167 @@
     "yes": "Ja",
     "ytd_premium": "JTD-Prämie (Jahr bis heute)"
   },
-  "setups": {}
+  "setups": {},
+  "mngt_wrkflw": {
+    "tickets" : {
+      "reassign": "Erneut zuweisen",
+      "authorize": "Autorisieren",
+      "from": "Von",
+      "to": "An",
+      "type": "Typ",
+      "module": "Modul",
+      "selectAll": "Alle auswählen",
+      "createdOn": "Erstellt am",
+      "ticketName": "Ticketname",
+      "refNo": "Referenz Nr",
+      "client": "Kunde",
+      "intermediary": "Vermittler",
+      "ticketFrom": "Ticket von",
+      "ticketAssignee": "Ticket-Zugewiesener",
+      "reassignTask": "Aufgabe erneut zuweisen",
+      "user": "Benutzer",
+      "defaultUser": "Standardbenutzer",
+      "comments": "Kommentare",
+      "cancel": "Abbrechen",
+      "debtOwnerPromiseDate": "Schuldinhaber und Versprechen Datum",
+      "debtOwner": "Schuldinhaber",
+      "promiseDate": "Versprechen Datum",
+      "next": "Nächster",
+      "scheduleCheck": "Zeitplan überprüfen",
+      "readyForAuthorization": "Ist dieser Zeitplan zur Autorisierung bereit?",
+      "yes": "Ja",
+      "no": "Nein",
+      "dispatchDocuments": "Dokumente versenden",
+      "documentsToDispatch": "Zu versendende Dokumente",
+      "reasonForRejection": "Grund für die Ablehnung",
+      "documentsDispatch": "Dokumente versenden",
+      "clientName": "Kundenname",
+      "policyNo": "Polizzennummer",
+      "dateCreated": "Erstellungsdatum",
+      "transactionType": "Transaktionstyp",
+      "endorsementNumber": "Endorsement-Nummer",
+      "documents": "Dokumente",
+      "back": "Zurück"
+    },
+    "policyDetails": {
+      "policyDetails": "Versicherungsdetails",
+      "client": "Kunde",
+      "currency": "Währung",
+      "agency": "Agentur",
+      "totalSI": "Gesamt-VS",
+      "endorseNo": "Endorse. Nr.",
+      "premium": "Prämie",
+      "ticketRemarks": "Ticket-Anmerkungen",
+      "coverFrom": "Abdeckung von",
+      "coverTo": "Abdeckung bis",
+      "riskID": "Risiko-ID",
+      "description": "Beschreibung",
+      "coverPeriod": "Deckungszeitraum",
+      "subclass": "Unterklasse",
+      "coverType": "Deckungstyp",
+      "sumInsured": "Versicherungssumme",
+      "insured": "Versichert",
+      "commission": "Provision",
+      "limit": "Grenze",
+      "rateType": "Tariftyp",
+      "sectionRate": "Sektionsrate",
+      "freeLimit": "Freigrenze",
+      "rateDivFac": "Tarif Div Faktor",
+      "multiplier": "Multiplikator",
+      "rate": "Rate",
+      "reinsure": "Rückversichern",
+      "authorizeClaim": "Anspruch autorisieren"
+    },
+    "reinsurance": {
+      "treatyRiskCeding": "Vertragliches Risikoübertragung",
+      "previousCeding": "Vorherige Übertragung",
+      "treatySetup": "Vertragsaufbau",
+      "policyFacreCeding": "Police-Facre-Übertragung",
+      "risks": "Risiken",
+      "populateAllocations": "Zuweisungen ausfüllen",
+      "treatyCessions": "Vertragsübertragungen",
+      "facreSessions": "Facre-Übertragungen",
+      "current": "Aktuell",
+      "grossRetn": "Bruttorendite",
+      "riskDesc": "Risikobeschreibung",
+      "subclass": "Unterklasse",
+      "specialRetn": "Spezielle Rendite",
+      "excess": "Überschuss",
+      "treaty": "Vertrag",
+      "pRate": "P-Satz",
+      "riAmount": "RI-Betrag",
+      "cession": "Zession",
+      "premTax": "Prämiensteuer",
+      "comm": "Kommission",
+      "remarks": "Bemerkungen",
+      "companyNetRetention": "Unternehmensnetzretention",
+      "reinsurancePool": "Rückversicherungspool",
+      "total": "Gesamt",
+      "reinsurer": "Rückversicherer",
+      "reinPremTax": "Rein Prämiensteuer",
+      "sumReinsured": "Summe rückversichert",
+      "facreOutOfferSlip": "Facre-Ausgebotslip",
+      "reinsurersDebitCreditNote": "Reinsurers-Debit-/Kreditnotiz",
+      "importCSV": "CSV-Datei importieren",
+      "reinsurerName": "Rückversicherername",
+      "brokerName": "Brokername",
+      "facreAccountId": "Facre-Kontoid",
+      "rateAmount": "Satz/Betrag",
+      "cessionRate": "Zessionssatz",
+      "vat": "MwSt.",
+      "riskPremium": "Risikoprämie",
+      "trtOwnRetAmt": "Trt eigene ret betrag",
+      "poolRate": "Poolrate",
+      "poolAmt": "Poolbetrag",
+      "poolOwnRetPrem": "Pool eigene ret prämie",
+      "commRate": "Provisionsrate",
+      "commAmt": "Provisionsbetrag",
+      "vatRate": "MwSt.-Satz",
+      "yr": "Jahr",
+      "capacity": "Kapazität",
+      "compOwnAmount": "Eigener Betrag des Unternehmens",
+      "treatySI": "Vertrags-SI",
+      "vmlpSI": "VMLP-SI",
+      "vmlpExcessSI": "VMLP-Überschussversicherungssumme",
+      "vmlpExcessPrem": "VMLP-Überschussprämie",
+      "updatePremRate": "Prämienrate aktualisieren",
+      "compGrossRet": "Bruttorendite der Gesellschaft",
+      "netCompRet": "Netto-Rücklage der Gesellschaft",
+      "facreCeded": "Abgegebene Facre",
+      "retentionRate": "Retentionssatz",
+      "groupRiskPct": "Gruppenrisikoprozent",
+      "groupTopLoc": "Gruppen-Top-Loc",
+      "riPrem": "RI-Prämie",
+      "cessionPct": "Zessionsprozent",
+      "treatyType": "Vertragstyp",
+      "U/WYear": "U/W-Jahr",
+      "siStatingFrom": "SI beginnend ab",
+      "facreAccountId": "Facre-Kontoid",
+      "date": "Datum",
+      "managementType": "Managementtyp",
+      "managementValue": "Managementwert",
+      "treatyRiSummary": "Vertrags-Rückversicherungszusammenfassung",
+      "treatyPart": "Vertragsparteien",
+      "facreCeding": "Facre-Übertragung",
+      "xolUwCess": "XOL UW-Übertragungen"
+    },
+    "exceptions": {
+      "setStandard": "Standard festlegen",
+      "usedStandard": "Verwendeter Standard",
+      "authorized": "Autorisiert",
+      "submissionDate": "Einreichungsdatum",
+      "authorizedBy": "Autorisiert von",
+      "authorizedDate": "Autorisierungsdatum",
+      "receiptNo": "Belegnummer",
+      "receiptDate": "Belegdatum",
+      "receiptAmount": "Belegbetrag",
+      "receiptBalance": "Belegsaldo",
+      "receiptSettlement": "Belegabwicklung",
+      "debitCredit": "Soll/Haben",
+      "receiptBy": "Erhalt durch",
+      "level": "Ebene",
+      "roleName": "Rollenname",
+      "authorizeDate": "Autorisierungsdatum"
+    }
+  }
 }
