--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -52,7 +52,7 @@
     "team": "Team",
     "tickets": "Tickets",
     "view_all": "VIEW ALL",
-    "dispatch": "DISPATCH",
+    "dispatch": "MASS DISPATCH",
     "more": "more",
     "DAY": "day",
     "WEEK": "week",
@@ -603,7 +603,7 @@
       "staff_no": "Staff No",
       "surname": "Surname",
       "other_names": "Other Names",
-    
+
       "underwriting_risk_details": "Underwriting: Risk Details",
       "risk_details": "Risk Details",
       "insured": "Insured",
@@ -613,7 +613,7 @@
       "binder": "Binder",
       "cover_type": "Cover type",
       "risk_cover_days": "Risk cover days",
- 
+
       "override_but_charge": "Override/But Charge Premium",
       "ncd_applicable": "NCD applicable",
       "ncd_level": "NCD level",
@@ -763,5 +763,167 @@
     "yes": "Yes",
     "ytd_premium": "YTD Premium"
   },
-  "setups": {}
+  "setups": {},
+  "mngt_wrkflw": {
+    "tickets" : {
+      "reassign": "Reassign",
+      "authorize": "Authorize",
+      "from": "From",
+      "to": "To",
+      "type": "Type",
+      "module": "Module",
+      "selectAll": "Select All",
+      "createdOn": "Created On",
+      "ticketName": "Ticket Name",
+      "refNo": "Ref No",
+      "client": "Client",
+      "intermediary": "Intermediary",
+      "ticketFrom": "Ticket From",
+      "ticketAssignee": "Ticket Assignee",
+      "reassignTask": "Reassign Task",
+      "user": "User",
+      "defaultUser": "Default User",
+      "comments": "Comments",
+      "cancel": "Cancel",
+      "debtOwnerPromiseDate": "Debt owner and promise date",
+      "debtOwner": "Debt owner",
+      "promiseDate": "Promise date",
+      "next": "Next",
+      "scheduleCheck": "Schedule check",
+      "readyForAuthorization": "Is this schedule ready for authorization?",
+      "yes": "Yes",
+      "no": "No",
+      "dispatchDocuments": "Dispatch documents",
+      "documentsToDispatch": "Documents to dispatch",
+      "reasonForRejection": "Reason for rejection",
+      "documentsDispatch": "Documents Dispatch",
+      "clientName": "Client name",
+      "policyNo": "Policy no",
+      "dateCreated": "Date created",
+      "transactionType": "Transaction type",
+      "endorsementNumber": "Endorsement number",
+      "documents": "Documents",
+      "back": "Back"
+    },
+    "policyDetails": {
+      "policyDetails": "Policy details",
+      "client": "Client",
+      "currency": "Currency",
+      "agency": "Agency",
+      "totalSI": "Total S.I.",
+      "endorseNo": "Endorse. No",
+      "premium": "Premium",
+      "ticketRemarks": "Ticket Remarks",
+      "coverFrom": "Cover From",
+      "coverTo": "Cover To",
+      "riskID": "Risk ID",
+      "description": "Description",
+      "coverPeriod": "Cover period",
+      "subclass": "Subclass",
+      "coverType": "Cover type",
+      "sumInsured": "Sum insured",
+      "insured": "Insured",
+      "commission": "Commission",
+      "limit": "Limit",
+      "rateType": "Rate type",
+      "sectionRate": "Section rate",
+      "freeLimit": "Free limit",
+      "rateDivFac": "Rate Div Fac",
+      "multiplier": "Multiplier",
+      "rate": "Rate",
+      "reinsure": "Reinsure",
+      "authorizeClaim": "Authorize Claim"
+    },
+    "reinsurance": {
+      "treatyRiskCeding": "Treaty risk ceding",
+      "previousCeding": "Previous ceding",
+      "treatySetup": "Treaty setup",
+      "policyFacreCeding": "Policy facre ceding",
+      "risks": "Risks",
+      "populateAllocations": "Populate allocations",
+      "treatyCessions": "Treaty cessions",
+      "facreSessions": "Facre cessions",
+      "current": "Current",
+      "grossRetn": "Gross retn",
+      "riskDesc": "Risk desc",
+      "subclass": "Subclass",
+      "specialRetn": "Special retn",
+      "excess": "Excess",
+      "treaty": "Treaty",
+      "pRate": "P rate",
+      "riAmount": "RI amount",
+      "cession": "Cession",
+      "premTax": "Prem tax",
+      "comm": "Comm",
+      "remarks": "Remarks",
+      "companyNetRetention": "Company net retention",
+      "reinsurancePool": "Reinsurance pool",
+      "total": "Total",
+      "reinsurer": "Reinsurer",
+      "reinPremTax": "Rein prem tax",
+      "sumReinsured": "Sum reinsured",
+      "facreOutOfferSlip": "Facre out offer slip",
+      "reinsurersDebitCreditNote": "Reinsurers debit/credit note",
+      "importCSV": "Import CSV file",
+      "reinsurerName": "Reinsurer name",
+      "brokerName": "Broker name",
+      "facreAccountId": "Facre account Id",
+      "rateAmount": "Rate/amount",
+      "cessionRate": "Cession rate",
+      "vat": "Vat",
+      "riskPremium": "Risk premium",
+      "trtOwnRetAmt": "Trt own ret amt",
+      "poolRate": "Pool rate",
+      "poolAmt": "Pool amt",
+      "poolOwnRetPrem": "Pool own ret prem",
+      "commRate": "Comm rate",
+      "commAmt": "Comm amt",
+      "vatRate": "Vat rate",
+      "yr": "Year",
+      "capacity": "Capacity",
+      "compOwnAmount": "Comp. own amount",
+      "treatySI": "Treaty SI",
+      "vmlpSI": "VMLP SI",
+      "vmlpExcessSI": "VMLP excess sum insured",
+      "vmlpExcessPrem": "VMLP excess premium",
+      "updatePremRate": "Update premium rate",
+      "compGrossRet": "Comp gross ret",
+      "netCompRet": "Net comp ret",
+      "facreCeded": "Facre ceded",
+      "retentionRate": "Retention rate",
+      "groupRiskPct": "Group risk pct",
+      "groupTopLoc": "Group top loc",
+      "riPrem": "RI prem",
+      "cessionPct": "Cession pct",
+      "treatyType": "Treaty type",
+      "U/WYear": "U/W year",
+      "siStatingFrom": "SI starting from",
+      "facreAccountId": "Facre account id",
+      "date": "Date",
+      "managementType": "Management type",
+      "managementValue": "Management value",
+      "treatyRiSummary": "Treaty RI summary",
+      "treatyPart": "Treaty participants",
+      "facreCeding": "Facre ceding",
+      "xolUwCess": "XOL UW cessions"
+    },
+    "exceptions": {
+      "setStandard": "Set standard",
+      "usedStandard": "Used standard",
+      "authorized": "Authorized",
+      "submissionDate": "Submission date",
+      "authorizedBy": "Authorized by",
+      "authorizedDate": "Authorized date",
+      "receiptNo": "Receipt no",
+      "receiptDate": "Receipt date",
+      "receiptAmount": "Receipt amount",
+      "receiptBalance": "Receipt balance",
+      "receiptSettlement": "Receipt settlement",
+      "debitCredit": "Debit/credit",
+      "receiptBy": "Receipt by",
+      "level": "Level",
+      "roleName": "Role name",
+      "authorizeDate": "Authorize date"
+    }
+  }
 }
