--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -52,7 +52,7 @@
     "team": "Equipo",
     "tickets": "Boletos",
     "view_all": "VER TODO",
-    "dispatch": "DESPACHO",
+    "dispatch": "DESPACHO MASIVO",
     "more": "más",
     "DAY": "día",
     "WEEK": "semana",
@@ -754,5 +754,167 @@
     "yes": "Sí",
     "ytd_premium": "Prima del año hasta la fecha"
   },
-  "setups": {}
+  "setups": {},
+  "mngt_wrkflw": {
+    "tickets" : {
+      "reassign": "Reasignar",
+      "authorize": "Autorizar",
+      "from": "De",
+      "to": "A",
+      "type": "Tipo",
+      "module": "Módulo",
+      "selectAll": "Seleccionar Todo",
+      "createdOn": "Creado En",
+      "ticketName": "Nombre del Ticket",
+      "refNo": "Ref. No",
+      "client": "Cliente",
+      "intermediary": "Intermediario",
+      "ticketFrom": "Ticket De",
+      "ticketAssignee": "Asignado al Ticket",
+      "reassignTask": "Reasignar Tarea",
+      "user": "Usuario",
+      "defaultUser": "Usuario Predeterminado",
+      "comments": "Comentarios",
+      "cancel": "Cancelar",
+      "debtOwnerPromiseDate": "Propietario de la deuda y fecha de promesa",
+      "debtOwner": "Propietario de la deuda",
+      "promiseDate": "Fecha de promesa",
+      "next": "Siguiente",
+      "scheduleCheck": "Programar chequeo",
+      "readyForAuthorization": "¿Está esta programación lista para la autorización?",
+      "yes": "Sí",
+      "no": "No",
+      "dispatchDocuments": "¿Despachar documentos",
+      "documentsToDispatch": "Documentos a despachar",
+      "reasonForRejection": "Motivo de rechazo",
+      "documentsDispatch": "Despacho de Documentos",
+      "clientName": "Nombre del Cliente",
+      "policyNo": "Número de Póliza",
+      "dateCreated": "Fecha de Creación",
+      "transactionType": "Tipo de Transacción",
+      "endorsementNumber": "Número de Endoso",
+      "documents": "Documentos",
+      "back": "Volver"
+    },
+    "policyDetails": {
+      "policyDetails": "Detalles de la póliza",
+      "client": "Cliente",
+      "currency": "Moneda",
+      "agency": "Agencia",
+      "totalSI": "Total S.A.",
+      "endorseNo": "N.º de endoso",
+      "premium": "Prima",
+      "ticketRemarks": "Observaciones del ticket",
+      "coverFrom": "Cobertura Desde",
+      "coverTo": "Cobertura Hasta",
+      "riskID": "ID de Riesgo",
+      "description": "Descripción",
+      "coverPeriod": "Período de Cobertura",
+      "subclass": "Subclase",
+      "coverType": "Tipo de Cobertura",
+      "sumInsured": "Suma Asegurada",
+      "insured": "Asegurado",
+      "commission": "Comisión",
+      "limit": "Límite",
+      "rateType": "Tipo de Tasa",
+      "sectionRate": "Tasa de Sección",
+      "freeLimit": "Límite Libre",
+      "rateDivFac": "Factor de División de Tasa",
+      "multiplier": "Multiplicador",
+      "rate": "Tasa",
+      "reinsure": "Reasegurar",
+      "authorizeClaim": "Autorizar Reclamo"
+    },
+    "reinsurance": {
+      "treatyRiskCeding": "Cesión de Riesgos del Tratado",
+      "previousCeding": "Cesión Anterior",
+      "treatySetup": "Configuración del Tratado",
+      "policyFacreCeding": "Cesión de Facre de Póliza",
+      "risks": "Riesgos",
+      "populateAllocations": "Poblar Asignaciones",
+      "treatyCessions": "Cesiones del Tratado",
+      "facreSessions": "Cesiones de Facre",
+      "current": "Actual",
+      "grossRetn": "Rendimiento Bruto",
+      "riskDesc": "Descripción del Riesgo",
+      "subclass": "Subclase",
+      "specialRetn": "Rendimiento Especial",
+      "excess": "Exceso",
+      "treaty": "Tratado",
+      "pRate": "Tasa P",
+      "riAmount": "Monto RI",
+      "cession": "Cesión",
+      "premTax": "Impuesto de Prima",
+      "comm": "Comisión",
+      "remarks": "Observaciones",
+      "companyNetRetention": "Retención Neta de la Compañía",
+      "reinsurancePool": "Pool de Reaseguro",
+      "total": "Total",
+      "reinsurer": "Reaseguradora",
+      "reinPremTax": "Impuesto de Prima de Reaseguro",
+      "sumReinsured": "Suma Reasegurada",
+      "facreOutOfferSlip": "Comprobante de Oferta de Facre",
+      "reinsurersDebitCreditNote": "Nota de Débito/Crédito de Reaseguradores",
+      "importCSV": "Importar archivo CSV",
+      "reinsurerName": "Nombre del Reasegurador",
+      "brokerName": "Nombre del Corredor",
+      "facreAccountId": "ID de Cuenta de Facre",
+      "rateAmount": "Tasa/monto",
+      "cessionRate": "Tasa de Cesión",
+      "vat": "IVA",
+      "riskPremium": "Prima de Riesgo",
+      "trtOwnRetAmt": "Monto de Retención Propia de Trt",
+      "poolRate": "Tasa de Pool",
+      "poolAmt": "Monto de Pool",
+      "poolOwnRetPrem": "Prima de Retención Propia de Pool",
+      "commRate": "Tasa de Comisión",
+      "commAmt": "Monto de Comisión",
+      "vatRate": "Tasa de IVA",
+      "yr": "Año",
+      "capacity": "Capacidad",
+      "compOwnAmount": "Cantidad Propia de la Compañía",
+      "treatySI": "SI de Tratado",
+      "vmlpSI": "SI de VMLP",
+      "vmlpExcessSI": "Suma Asegurada en Exceso de VMLP",
+      "vmlpExcessPrem": "Prima en Exceso de VMLP",
+      "updatePremRate": "Actualizar Tasa de Prima",
+      "compGrossRet": "Retorno Bruto de la Compañía",
+      "netCompRet": "Retorno Neto de la Compañía",
+      "facreCeded": "Cedido por Facre",
+      "retentionRate": "Tasa de Retención",
+      "groupRiskPct": "Porcentaje de Riesgo del Grupo",
+      "groupTopLoc": "Mejor Ubicación del Grupo",
+      "riPrem": "Prima de RI",
+      "cessionPct": "Porcentaje de Cesión",
+      "treatyType": "Tipo de Tratado",
+      "U/WYear": "Año de U/W",
+      "siStatingFrom": "SI comenzando desde",
+      "facreAccountId": "ID de Cuenta de Facre",
+      "date": "Fecha",
+      "managementType": "Tipo de Gestión",
+      "managementValue": "Valor de Gestión",
+      "treatyRiSummary": "Resumen de la Reaseguración de Tratado",
+      "treatyPart": "Participantes del Tratado",
+      "facreCeding": "Cesión de Facre",
+      "xolUwCess": "Cesiones XOL UW"
+    },
+    "exceptions": {
+      "setStandard": "Establecer estándar",
+      "usedStandard": "Estándar utilizado",
+      "authorized": "Autorizado",
+      "submissionDate": "Fecha de presentación",
+      "authorizedBy": "Autorizado por",
+      "authorizedDate": "Fecha de autorización",
+      "receiptNo": "Número de recibo",
+      "receiptDate": "Fecha de recibo",
+      "receiptAmount": "Monto del recibo",
+      "receiptBalance": "Saldo del recibo",
+      "receiptSettlement": "Liquidación del recibo",
+      "debitCredit": "Débito/Crédito",
+      "receiptBy": "Recibido por",
+      "level": "Nivel",
+      "roleName": "Nombre del rol",
+      "authorizeDate": "Fecha de autorización"
+    }
+  }
 }
