--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -52,7 +52,7 @@
     "team": "Équipe",
     "tickets": "Billets",
     "view_all": "VOIR TOUT",
-    "dispatch": "EXPÉDITION",
+    "dispatch": "EXPÉDITION MASSIVE",
     "more": "plus",
     "DAY": "jour",
     "WEEK": "semaine",
@@ -754,5 +754,167 @@
     "yes": "Oui",
     "ytd_premium": "Prime YTD (Année à ce jour)"
   },
-  "setups": {}
+  "setups": {},
+  "mngt_wrkflw": {
+    "tickets" : {
+      "reassign": "Réaffecter",
+      "authorize": "Autoriser",
+      "from": "De",
+      "to": "À",
+      "type": "Type",
+      "module": "Module",
+      "selectAll": "Sélectionner Tout",
+      "createdOn": "Créé Le",
+      "ticketName": "Nom du Ticket",
+      "refNo": "Réf. No",
+      "client": "Client",
+      "intermediary": "Intermédiaire",
+      "ticketFrom": "Ticket De",
+      "ticketAssignee": "Ticket Assigné",
+      "reassignTask": "Réaffecter la tâche",
+      "user": "Utilisateur",
+      "defaultUser": "Utilisateur par défaut",
+      "comments": "Commentaires",
+      "cancel": "Annuler",
+      "debtOwnerPromiseDate": "Propriétaire de la dette et date de promesse",
+      "debtOwner": "Propriétaire de la dette",
+      "promiseDate": "Date de promesse",
+      "next": "Suivant",
+      "scheduleCheck": "Vérification de l'agenda",
+      "readyForAuthorization": "Ce planning est-il prêt pour l'autorisation ?",
+      "yes": "Oui",
+      "no": "Non",
+      "dispatchDocuments": "Envoyer des documents",
+      "documentsToDispatch": "Documents à envoyer",
+      "reasonForRejection": "Raison du rejet",
+      "documentsDispatch": "Envoi de Documents",
+      "clientName": "Nom du Client",
+      "policyNo": "Numéro de Police",
+      "dateCreated": "Date de Création",
+      "transactionType": "Type de Transaction",
+      "endorsementNumber": "Numéro d'Endossement",
+      "documents": "Documents",
+      "back": "Retour"
+    },
+    "policyDetails": {
+      "policyDetails": "Détails de la police",
+      "client": "Client",
+      "currency": "Devise",
+      "agency": "Agence",
+      "totalSI": "Total S.A.",
+      "endorseNo": "N° d'endossement",
+      "premium": "Prime",
+      "ticketRemarks": "Remarques sur le ticket",
+      "coverFrom": "Couverture Du",
+      "coverTo": "Couverture Au",
+      "riskID": "ID du Risque",
+      "description": "Description",
+      "coverPeriod": "Période de Couverture",
+      "subclass": "Sous-classe",
+      "coverType": "Type de Couverture",
+      "sumInsured": "Somme Assurée",
+      "insured": "Assuré",
+      "commission": "Commission",
+      "limit": "Limite",
+      "rateType": "Type de Taux",
+      "sectionRate": "Taux de Section",
+      "freeLimit": "Limite Gratuite",
+      "rateDivFac": "Facteur de Division des Taux",
+      "multiplier": "Multiplicateur",
+      "rate": "Taux",
+      "reinsure": "Réassurer",
+      "authorizeClaim": "Autoriser la Réclamation"
+    },
+    "reinsurance": {
+      "treatyRiskCeding": "Cession de Risques de Traités",
+      "previousCeding": "Cession Précédente",
+      "treatySetup": "Configuration de Traité",
+      "policyFacreCeding": "Cession de Facre de Police",
+      "risks": "Risques",
+      "populateAllocations": "Remplir les Affectations",
+      "treatyCessions": "Cessions de Traité",
+      "facreSessions": "Sessions Facre",
+      "current": "Actuel",
+      "grossRetn": "Rendement Brut",
+      "riskDesc": "Description du Risque",
+      "subclass": "Sous-classe",
+      "specialRetn": "Rendement Spécial",
+      "excess": "Excès",
+      "treaty": "Traitement",
+      "pRate": "Taux P",
+      "riAmount": "Montant RI",
+      "cession": "Cession",
+      "premTax": "Taxe sur Prime",
+      "comm": "Commission",
+      "remarks": "Remarques",
+      "companyNetRetention": "Rétention Nette de l'Entreprise",
+      "reinsurancePool": "Pool de Réassurance",
+      "total": "Total",
+      "reinsurer": "Réassureur",
+      "reinPremTax": "Taxe sur Prime de Réassurance",
+      "sumReinsured": "Somme Réassurée",
+      "facreOutOfferSlip": "Coupon d'offre de sortie de Facre",
+      "reinsurersDebitCreditNote": "Note de débit/crédit des réassureurs",
+      "importCSV": "Importer un fichier CSV",
+      "reinsurerName": "Nom du Réassureur",
+      "brokerName": "Nom du Courtier",
+      "facreAccountId": "Identifiant du Compte Facre",
+      "rateAmount": "Taux/montant",
+      "cessionRate": "Taux de Cession",
+      "vat": "TVA",
+      "riskPremium": "Prime de Risque",
+      "trtOwnRetAmt": "Montant de la Rétention Propre de Trt",
+      "poolRate": "Taux de Pool",
+      "poolAmt": "Montant de Pool",
+      "poolOwnRetPrem": "Prime de Rétention Propre de Pool",
+      "commRate": "Taux de Commission",
+      "commAmt": "Montant de Commission",
+      "vatRate": "Taux de TVA",
+      "yr": "Année",
+      "capacity": "Capacité",
+      "compOwnAmount": "Montant Propre de la Compagnie",
+      "treatySI": "SI de Traitement",
+      "vmlpSI": "SI VMLP",
+      "vmlpExcessSI": "SI en Excès de VMLP",
+      "vmlpExcessPrem": "Prime en Excès de VMLP",
+      "updatePremRate": "Mettre à Jour le Taux de Prime",
+      "compGrossRet": "Rendement Brut de la Compagnie",
+      "netCompRet": "Rendement Net de la Compagnie",
+      "facreCeded": "Cédé par Facre",
+      "retentionRate": "Taux de Rétention",
+      "groupRiskPct": "Pourcentage de Risque du Groupe",
+      "groupTopLoc": "Top Local du Groupe",
+      "riPrem": "Prime de RI",
+      "cessionPct": "Pourcentage de Cession",
+      "treatyType": "Type de Traitement",
+      "U/WYear": "Année U/W",
+      "siStatingFrom": "SI à partir de",
+      "facreAccountId": "Identifiant du Compte Facre",
+      "date": "Date",
+      "managementType": "Type de Gestion",
+      "managementValue": "Valeur de Gestion",
+      "treatyRiSummary": "Résumé de la Réassurance de Traitement",
+      "treatyPart": "Participants au Traitement",
+      "facreCeding": "Cession de Facre",
+      "xolUwCess": "Cessions XOL UW"
+    },
+    "exceptions": {
+      "setStandard": "Définir un standard",
+      "usedStandard": "Standard utilisé",
+      "authorized": "Autorisé",
+      "submissionDate": "Date de soumission",
+      "authorizedBy": "Autorisé par",
+      "authorizedDate": "Date d'autorisation",
+      "receiptNo": "Numéro de reçu",
+      "receiptDate": "Date de réception",
+      "receiptAmount": "Montant du reçu",
+      "receiptBalance": "Solde du reçu",
+      "receiptSettlement": "Règlement du reçu",
+      "debitCredit": "Débit/crédit",
+      "receiptBy": "Reçu par",
+      "level": "Niveau",
+      "roleName": "Nom du rôle",
+      "authorizeDate": "Date d'autorisation"
+    }
+  }
 }
