--- a/src/assets/i18n/ke.json
+++ b/src/assets/i18n/ke.json
@@ -52,7 +52,7 @@
     "team": "Timu",
     "tickets": "Tiketi",
     "view_all": "ONA YOTE",
-    "dispatch": "TUMA",
+    "dispatch": "TUMA KWA WINGI",
     "more": "zaidi",
     "DAY": "siku",
     "WEEK": "wiki",
@@ -753,5 +753,167 @@
     "yes": "Ndio",
     "ytd_premium": "Ada ya Mwaka hadi Leo"
   },
-  "setups": {}
+  "setups": {},
+  "mngt_wrkflw": {
+    "tickets" : {
+      "reassign": "Kuhamisha tena",
+      "authorize": "Idhinisha",
+      "from": "Kutoka",
+      "to": "Hadi",
+      "type": "Aina",
+      "module": "Moduli",
+      "selectAll": "Chagua Zote",
+      "createdOn": "Imetengenezwa Siku",
+      "ticketName": "Jina la Tiketi",
+      "refNo": "Kumbukumbu Na",
+      "client": "Mteja",
+      "intermediary": "Mpatanishi",
+      "ticketFrom": "Tiketi Kutoka",
+      "ticketAssignee": "Mteule wa Tiketi",
+      "reassignTask": "Kuhamisha kazi tena",
+      "user": "Mtumiaji",
+      "defaultUser": "Mtumiaji wa Kawaida",
+      "comments": "Maoni",
+      "cancel": "Ghairi",
+      "debtOwnerPromiseDate": "Mmiliki wa deni na tarehe ya ahadi",
+      "debtOwner": "Mmiliki wa deni",
+      "promiseDate": "Tarehe ya ahadi",
+      "next": "Ifuatayo",
+      "scheduleCheck": "Panga ukaguzi",
+      "readyForAuthorization": "Je, hili ratiba iko tayari kwa idhini?",
+      "yes": "Ndio",
+      "no": "Hapana",
+      "dispatchDocuments": "Kutuma nyaraka",
+      "documentsToDispatch": "Nyaraka za kutuma",
+      "reasonForRejection": "Sababu ya kukataa",
+      "documentsDispatch": "Kutuma Nyaraka",
+      "clientName": "Jina la Mteja",
+      "policyNo": "Namba ya Sera",
+      "dateCreated": "Tarehe iliyoundwa",
+      "transactionType": "Aina ya Miamala",
+      "endorsementNumber": "Nambari ya Kuidhinisha",
+      "documents": "Nyaraka",
+      "back": "Nyuma"
+    },
+    "policyDetails": {
+      "policyDetails": "Maelezo ya Bima",
+      "client": "Mteja",
+      "currency": "Sarafu",
+      "agency": "Wakala",
+      "totalSI": "Jumla ya S.I.",
+      "endorseNo": "Kuidhinisha. Hakuna",
+      "premium": "Malipo",
+      "ticketRemarks": "Maoni ya Tiketi",
+      "coverFrom": "Kinga Kutoka",
+      "coverTo": "Kinga Kwa",
+      "riskID": "ID ya Hatari",
+      "description": "Maelezo",
+      "coverPeriod": "Kipindi cha Bima",
+      "subclass": "Nusukao",
+      "coverType": "Aina ya Bima",
+      "sumInsured": "Jumla iliyohakikishwa",
+      "insured": "Imehakikishwa",
+      "commission": "Tume",
+      "limit": "Kikomo",
+      "rateType": "Aina ya Kiwango",
+      "sectionRate": "Kiwango cha Sehemu",
+      "freeLimit": "Kikomo cha Bure",
+      "rateDivFac": "Kiwango Div Fac",
+      "multiplier": "Mfanyizi",
+      "rate": "Kiwango",
+      "reinsure": "Rikindika",
+      "authorizeClaim": "Idhinisha Madai"
+    },
+    "reinsurance": {
+      "treatyRiskCeding": "Mkataba wa Kupeana Hatari",
+      "previousCeding": "Kupeana Kabla",
+      "treatySetup": "Kuanzisha Mkataba",
+      "policyFacreCeding": "Mkataba wa Kufuta Facre",
+      "risks": "Hatari",
+      "populateAllocations": "Jaza Mgawo",
+      "treatyCessions": "Mkataba wa Uhamishaji",
+      "facreSessions": "Kikao cha Facre",
+      "current": "Sasa",
+      "grossRetn": "Mapato ya Gharama",
+      "riskDesc": "Maelezo ya Hatari",
+      "subclass": "Nusukao",
+      "specialRetn": "Mapato Maalum",
+      "excess": "Zidi",
+      "treaty": "Mkataba",
+      "pRate": "Kiwango cha P",
+      "riAmount": "Kiasi cha RI",
+      "cession": "Kuwakilisha",
+      "premTax": "Ushuru wa Malipo",
+      "comm": "Tume",
+      "remarks": "Maelezo",
+      "companyNetRetention": "Kuhifadhi Neti ya Kampuni",
+      "reinsurancePool": "Poo ya Rikindiko",
+      "total": "Jumla",
+      "reinsurer": "Rikindikaji",
+      "reinPremTax": "Rein ushuru wa malipo",
+      "sumReinsured": "Jumla iliyokindikwa",
+      "facreOutOfferSlip": "Facre nje ya ofa kibali",
+      "reinsurersDebitCreditNote": "Reinsurers dai/mkopo maelezo",
+      "importCSV": "Ingiza faili ya CSV",
+      "reinsurerName": "Jina la mhusika wa rikindikaji",
+      "brokerName": "Jina la mpatanishi",
+      "facreAccountId": "Id ya Akaunti ya Facre",
+      "rateAmount": "Kiwango/kiasi",
+      "cessionRate": "Kiwango cha kuhamisha",
+      "vat": "VAT",
+      "riskPremium": "Ada ya Hatari",
+      "trtOwnRetAmt": "Kiasi cha Reteni ya Trt",
+      "poolRate": "Kiwango cha Pool",
+      "poolAmt": "Kiasi cha Pool",
+      "poolOwnRetPrem": "Ada ya Reteni ya Kibinafsi ya Pool",
+      "commRate": "Kiwango cha Tume",
+      "commAmt": "Kiasi cha Tume",
+      "vatRate": "Kiwango cha VAT",
+      "yr": "Mwaka",
+      "capacity": "Uwezo",
+      "compOwnAmount": "Kiasi cha Kampuni ya Mwenyewe",
+      "treatySI": "Vertrags-SI",
+      "vmlpSI": "VMLP-SI",
+      "vmlpExcessSI": "SI ya Ziada ya VMLP",
+      "vmlpExcessPrem": "Malipo ya Ziada ya VMLP",
+      "updatePremRate": "Sasisha Kiwango cha Malipo",
+      "compGrossRet": "Rudisha ya Gharama Kubwa",
+      "netCompRet": "Rudisha ya Gharama Ndogo",
+      "facreCeded": "Facre iliyotolewa",
+      "retentionRate": "Kiwango cha Kurudisha",
+      "groupRiskPct": "Asilimia ya Hatari ya Kikundi",
+      "groupTopLoc": "Mahali Bora ya Kikundi",
+      "riPrem": "RI prem",
+      "cessionPct": "Asilimia ya Kuhamisha",
+      "treatyType": "Aina ya Mkataba",
+      "U/WYear": "Mwaka wa U/W",
+      "siStatingFrom": "SI ikitoka kuanzia",
+      "facreAccountId": "Id ya Akaunti ya Facre",
+      "date": "Tarehe",
+      "managementType": "Aina ya Usimamizi",
+      "managementValue": "Thamani ya Usimamizi",
+      "treatyRiSummary": "Muhtasari wa RI wa Mkataba",
+      "treatyPart": "Washiriki wa Mkataba",
+      "facreCeding": "Uhamishaji wa Facre",
+      "xolUwCess": "XOL UW-ceshens"
+    },
+    "exceptions": {
+      "setStandard": "Weka kiwango cha kawaida",
+      "usedStandard": "Kiwango cha kawaida kilichotumika",
+      "authorized": "Imeidhinishwa",
+      "submissionDate": "Tarehe ya kuwasilisha",
+      "authorizedBy": "Imeidhinishwa na",
+      "authorizedDate": "Tarehe ya kuidhinishwa",
+      "receiptNo": "Nambari ya risiti",
+      "receiptDate": "Tarehe ya risiti",
+      "receiptAmount": "Kiasi cha risiti",
+      "receiptBalance": "Salio la risiti",
+      "receiptSettlement": "Makazi ya risiti",
+      "debitCredit": "Deni/Mkopo",
+      "receiptBy": "Risiti na",
+      "level": "Kiunga",
+      "roleName": "Jina la jukumu",
+      "authorizeDate": "Tarehe ya kuidhinisha"
+    }
+  }
 }
