--- a/src/assets/i18n/cn.json
+++ b/src/assets/i18n/cn.json
@@ -52,7 +52,7 @@
     "team": "团队",
     "tickets": "票",
     "view_all": "查看全部",
-    "dispatch": "派遣",
+    "dispatch": "大规模派遣",
     "more": "更多",
     "DAY": "天",
     "WEEK": "周",
@@ -754,5 +754,167 @@
     "yes": "是",
     "ytd_premium": "截至今日的年度保费"
   },
-  "setups": {}
+  "setups": {},
+  "mngt_wrkflw": {
+    "tickets" : {
+      "reassign": "重新分配",
+      "authorize": "授权",
+      "from": "从",
+      "to": "至",
+      "type": "类型",
+      "module": "模块",
+      "selectAll": "全选",
+      "createdOn": "创建于",
+      "ticketName": "工单名称",
+      "refNo": "参考号",
+      "client": "客户",
+      "intermediary": "中介",
+      "ticketFrom": "工单来源",
+      "ticketAssignee": "工单受理人",
+      "reassignTask": "重新分配任务",
+      "user": "用户",
+      "defaultUser": "默认用户",
+      "comments": "评论",
+      "cancel": "取消",
+      "debtOwnerPromiseDate": "债权人和承诺日期",
+      "debtOwner": "债权人",
+      "promiseDate": "承诺日期",
+      "next": "下一个",
+      "scheduleCheck": "安排检查",
+      "readyForAuthorization": "这个计划准备好授权了吗？",
+      "yes": "是",
+      "no": "否",
+      "dispatchDocuments": "发送文件",
+      "documentsToDispatch": "要发送的文件",
+      "reasonForRejection": "拒绝的理由",
+      "documentsDispatch": "文件派发",
+      "clientName": "客户姓名",
+      "policyNo": "保单号",
+      "dateCreated": "创建日期",
+      "transactionType": "交易类型",
+      "endorsementNumber": "背书号",
+      "documents": "文件",
+      "back": "返回"
+    },
+    "policyDetails": {
+      "policyDetails": "保单详情",
+      "client": "客户",
+      "currency": "货币",
+      "agency": "代理机构",
+      "totalSI": "总保额",
+      "endorseNo": "批单编号",
+      "premium": "保费",
+      "ticketRemarks": "工单备注",
+      "coverFrom": "起保日期",
+      "coverTo": "止保日期",
+      "riskID": "风险 ID",
+      "description": "描述",
+      "coverPeriod": "保障期限",
+      "subclass": "子类",
+      "coverType": "保障类型",
+      "sumInsured": "保额",
+      "insured": "被保险人",
+      "commission": "佣金",
+      "limit": "限额",
+      "rateType": "费率类型",
+      "sectionRate": "分区费率",
+      "freeLimit": "免赔额",
+      "rateDivFac": "费率分摊因子",
+      "multiplier": "倍数",
+      "rate": "费率",
+      "reinsure": "再保险",
+      "authorizeClaim": "授权索赔"
+    },
+    "reinsurance": {
+      "treatyRiskCeding": "协议风险转出",
+      "previousCeding": "上次转出",
+      "treatySetup": "协议设置",
+      "policyFacreCeding": "保单Facre转出",
+      "risks": "风险",
+      "populateAllocations": "填充分配",
+      "treatyCessions": "协议转让",
+      "facreSessions": "Facre转让",
+      "current": "当前",
+      "grossRetn": "毛收益",
+      "riskDesc": "风险描述",
+      "subclass": "子类",
+      "specialRetn": "特别收益",
+      "excess": "超额",
+      "treaty": "条约",
+      "pRate": "P率",
+      "riAmount": "RI金额",
+      "cession": "让与",
+      "premTax": "保费税",
+      "comm": "佣金",
+      "remarks": "备注",
+      "companyNetRetention": "公司净保留",
+      "reinsurancePool": "再保险池",
+      "total": "总计",
+      "reinsurer": "再保险人",
+      "reinPremTax": "再保费税",
+      "sumReinsured": "再保金额",
+      "facreOutOfferSlip": "Facre外出报价单",
+      "reinsurersDebitCreditNote": "再保人借记/贷记通知",
+      "importCSV": "导入CSV文件",
+      "reinsurerName": "再保人姓名",
+      "brokerName": "经纪人姓名",
+      "facreAccountId": "Facre账户ID",
+      "rateAmount": "费率/金额",
+      "cessionRate": "转让率",
+      "vat": "增值税",
+      "riskPremium": "风险保费",
+      "trtOwnRetAmt": "Trt自有保留金额",
+      "poolRate": "池率",
+      "poolAmt": "池金额",
+      "poolOwnRetPrem": "池自有保留保费",
+      "commRate": "佣金率",
+      "commAmt": "佣金金额",
+      "vatRate": "增值税率",
+      "yr": "年",
+      "capacity": "容量",
+      "compOwnAmount": "公司自有金额",
+      "treatySI": "协议SI",
+      "vmlpSI": "VMLP SI",
+      "vmlpExcessSI": "VMLP超额保额",
+      "vmlpExcessPrem": "VMLP超额保费",
+      "updatePremRate": "更新保费率",
+      "compGrossRet": "公司毛收益",
+      "netCompRet": "公司净保留",
+      "facreCeded": "Facre转让",
+      "retentionRate": "留存率",
+      "groupRiskPct": "集团风险百分比",
+      "groupTopLoc": "集团顶级位置",
+      "riPrem": "RI保费",
+      "cessionPct": "转让百分比",
+      "treatyType": "条约类型",
+      "U/WYear": "U/W年",
+      "siStatingFrom": "SI起始于",
+      "facreAccountId": "Facre账户ID",
+      "date": "日期",
+      "managementType": "管理类型",
+      "managementValue": "管理价值",
+      "treatyRiSummary": "协议RI摘要",
+      "treatyPart": "协议参与者",
+      "facreCeding": "Facre转出",
+      "xolUwCess": "XOL UW转让"
+    },
+    "exceptions": {
+      "setStandard": "设置标准",
+      "usedStandard": "已使用的标准",
+      "authorized": "已授权",
+      "submissionDate": "提交日期",
+      "authorizedBy": "授权人",
+      "authorizedDate": "授权日期",
+      "receiptNo": "收据编号",
+      "receiptDate": "收据日期",
+      "receiptAmount": "收据金额",
+      "receiptBalance": "收据余额",
+      "receiptSettlement": "收据结算",
+      "debitCredit": "借方/贷方",
+      "receiptBy": "收据人",
+      "level": "级别",
+      "roleName": "角色名称",
+      "authorizeDate": "授权日期"
+    }
+  }
 }
