VQ-1723:Ability to capture policies generated outside the System for V6

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -635,32 +635,32 @@
       "company":"Company",
       "underwriting":"Underwriting",
       "policy_details":"Policy Details",
-      "cover_from":"Cover From",
-      "cover_to":"Cover To",
-      "cover_days":"Cover Days",
+      "cover_from":"Cover from",
+      "cover_to":"Cover to",
+      "cover_days":"Cover days",
       "currency":"Currency",
-      "currency_rate":"Currency Rate",
-      "currency_fixed_rate":"Currency Fixed Rate",
-      "policy_document":"Policy Document",
-      "payment_mode":"Payment Mode",
-      "payment_reference":"Payment Reference",
-      "payment_date":"Payment Date",
-      "payment_frequency":"Payment Frequency",
-      "holding_company":"Holding Company",
-      "other_insterested_parties":"Other Interested Parties",
-      "installment_date":"Installment Date",
-      "premium_financier":"Premium Financier",
-      "payment_plan":"Payment Plan",
+      "currency_rate":"Currency rate",
+      "currency_fixed_rate":"Currency fixed rate",
+      "policy_document":"Policy document",
+      "payment_mode":"Payment mode",
+      "payment_reference":"Payment reference",
+      "payment_date":"Payment date",
+      "payment_frequency":"Payment frequency",
+      "holding_company":"Holding company",
+      "other_insterested_parties":"Other interested parties",
+      "installment_date":"Installment date",
+      "premium_financier":"Premium financier",
+      "payment_plan":"Payment plan",
       "policy_generated":"Policy generated outside the system",
-      "old_policy_no":"Old Policy No.",
-      "old_agent_no":"Old Agent No.",
-      "reference_no":"Reference No.",
-      "import_risks":"Import Risks",
+      "old_policy_no":"Old policy no.",
+      "old_agent_no":"Old agent no.",
+      "reference_no":"Reference no.",
+      "import_risks":"Import risks",
       "another_policy":"From another policy",
       "from_csv":"From a CSV file",
       "select_file":"Select a file to upload",
-      "choose_fiel":"Choose File",
-      "policy_no":"Policy No.",
+      "choose_fiel":"Choose file",
+      "policy_no":"Policy no.",
 
       "annually": "Annually",
       "semi_annually":"Semi-annually",
